Jump Start Changelog
====================

2.1.4 - XX/XX/XXXX
------------------

* Fixed: Polylang plugin errors when translating post.

--------------------------------------------------------------

2.1.3 - 11/10/2016
------------------

* **Updated Theme Blvd framework to 2.6.2**
* Improvement: Moved "Ads Above Header" widget area before header, outside of the `#top` container; this causes less interference with all the potential user options that can be applied to he header.
* Fixed: Action hooks `themeblvd_main_bottom` and `themeblvd_main_end` were reversed in *footer.php*.
* Fixed: In-dashboard theme updates not working with older server setups -- *An error occurred while updating Jump Start: Download failed. SSL: no alternative certificate subject name matches target host name 'wpjumpstart.com'*
* Fixed: On some slider styles, navigation arrows were falling below image links, so they couldn't be clicked.
* Fixed: When setting a button's target in layout builder to "lightbox" -- it will now open up URLs not recognized as an image, video, or inline DIV, as a standard webpage.
* Fixed: Minor RTL and Translation bug fixes.
    * Loader icon on frontend of theme not being perfectly centered in RTL.
    * Added some missing styles for partner logo element in RTL.

--------------------------------------------------------------

2.1.2 - 07/12/2016
------------------

* Improvement: Better RTL support for uses of Bootstrap carousel, like with simple slider element.
* Fixed: Black background getting applied to single post content, when full-width or parallax featured image is set.
* Fixed: Minor RTL fixes for options interfaces.
* Updated TGMA plugin installer to 2.6.1.

--------------------------------------------------------------

2.1.1 - 07/08/2016
------------------

* **Updated Theme Blvd framework to 2.6.1**
* New: Styles presets added to theme options; see *Appearance > Theme Options > Styles*.